Fix routepopup title alignment

--- a/src/styles/components/routePopup.scss
+++ b/src/styles/components/routePopup.scss
@@ -2,6 +2,7 @@
   .title-wrapper {
     .title {
       white-space: nowrap;
+      text-align: center;
     }
   }
 
